Added more files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Jonathan Ma | www.majonathan.com</title>
-  <meta name="Description" content="This is demonstration of JQuery Terminal Emulator Plugin. To run terminal type tilda on you keyboard."/>
+  <title>Jonathan Ma | www.jonathan.ma</title>
+  <meta name="Description" content="Jonathan Ma's personal website"/>
   <script src="jquery.terminal/js/jquery-1.7.1.min.js"></script>
   <script src="jquery.terminal/js/jquery.mousewheel-min.js"></script>
   <script src="jquery.terminal/js/jquery.terminal-min.js"></script>
