Change to first person

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ jQuery(document).ready(function($) {
         <hr>
         <h2>A look into software, data science and management</h2>
         <hr class="bottom">
-        <p>WATERLOO, <span id="date">Jan. 6</span>&mdash;Jonathan Ma, a student of University of Waterloo in Computer Science and Statistics minoring in Economics, is looking for opportunities to diversify his skillset. He is interested in developing a wide range of skills in diverse fields that would complement each other in unexpected ways. So he ingrained this idea to his lifestyle, and created a goal to learning one new thing well every trimester.</p>
-        <p>Currently he is an experienced C++ systems developer who mostly worked on infrastructure and distributed systems during his internships at Citadel and LinkedIn. He has knowledge in quantitative trading especially in Options Market Making.</p>
+        <p>WATERLOO, <span id="date">Jan. 6</span>&mdash;I am a University of Waterloo student studying in Computer Science and Statistics minoring in Economics. I'm looking for opportunities to diversify my skillset. I am interested in developing a wide range of skills in diverse fields that would complement each other in unexpected ways. So I engrained this idea to my lifestyle, and created a goal to learning one new thing in-depth every trimester.</p>
+        <p>Currently I am an experienced C++ systems developer who mostly worked on infrastructure and distributed systems during my internships at Citadel and LinkedIn. I have knowledge in quantitative trading especially in Options Market Making.</p>
         <p id="click">For developers, please press ` on this page to open a terminal to navigate this website. If not or you're on mobile, click this paragraph and scroll down.</p>
     </section>
   </div>
