--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="style.css" rel="stylesheet"/>
 <meta name="keywords" content="jonathan ma, software engineer, project manager, data science, university of waterloo, citadel, linkedin">
+<meta name="google-site-verification" content="33dxLQTIC0Mw1p3Nw6VES6yVeHi2K2tkun3Pk1B34nc" />
   <meta charset="utf-8" />
   <title>Jonathan Ma | www.jonathan.ma</title>
   <meta name="Description" content="Jonathan Ma's personal website"/>
@@ -221,7 +222,7 @@ jQuery(document).ready(function($) {
         <hr>
         <h2>A look into software, data science and management</h2>
         <hr class="bottom">
-        <p>WATERLOO, <span id="date">Jan. 6</span>&mdash;I am a University of Waterloo student studying in Computer Science and Statistics minoring in Economics. I'm looking for opportunities to diversify my skillset. I am interested in developing a wide range of skills in diverse fields that would complement each other in unexpected ways. So I engrained this idea to my lifestyle, and created a goal to learning one new thing in-depth every trimester.</p>
+        <p>WATERLOO, <span id="date">Jan. 6</span>&mdash;I am a University of Waterloo student studying in Computer Science and Statistics minoring in Economics. I'm looking for opportunities to diversify my skillset. I am interested in developing a wide range of skills in diverse fields that would complement each other in unexpected ways. So I engrained this idea to my lifestyle, and created a goal of learning one new thing in depth every trimester.</p>
         <p>Currently I am an experienced C++ systems developer who mostly worked on infrastructure and distributed systems during my internships at Citadel and LinkedIn. I have knowledge in quantitative trading especially in Options Market Making.</p>
         <p id="click">For developers, please press ` on this page to open a terminal to navigate this website. If not or you're on mobile, click this paragraph and scroll down.</p>
     </section>
@@ -234,7 +235,7 @@ jQuery(document).ready(function($) {
         <h1>Resume</h1>
       </a>
     </section>
-    <a href=""><img src="images/resume.png"></img></a>
+    <a href="JMA_Resume.pdf"><img src="images/resume.png"></img></a>
     </div>>
   </section>
   <section class="sample" id="work">
